fix: card flickering

--- a/frontend/src/Pages/Home/AnimeManga/AnimeMangaDetail/AnimMangaDetailBottom/AnimeMangaDetailBottom.css
+++ b/frontend/src/Pages/Home/AnimeManga/AnimeMangaDetail/AnimMangaDetailBottom/AnimeMangaDetailBottom.css
@@ -89,6 +89,7 @@
     max-width: 10rem;
     width: 45%;
     height: 15rem;
+    position: relative;
 }
 
 .recommendation-container {
