--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,3 +57,8 @@ body {
 }
 
 
+
+
+.card-container  > img {
+    
+ }
